restarting gh-page build

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://volksrat71.github.io/portfolio",
+  "homepage": "https://volksrat71.github.io",
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -32,7 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^2.1.1"
-  }
+  "devDependencies": {}
 }
